welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
  var k = 0
  var L :Int = nums.length
  if (L <= 4){
    for (j <- 0 to L-1) {
      if (nums(j)==9) {
        return true
    	}
    }
  }
  else {
    for (j <- 0 to 3) {
      if (nums(j)==9) {
        return true
    	}
    }
  }
}